--- a/assets/css/index_style.css
+++ b/assets/css/index_style.css
@@ -1,12 +1,6 @@
-.container {
-    width: 90%;
-    max-width: 1100px;
+main {
+    max-width: 1300px;
     margin: auto;
-}
-
-.img_logo{
-    position: absolute;
-    left:0;
 }
 
 .img-carousel{
@@ -18,39 +12,24 @@
     text-align: center;
 }
 
-.img-home-cards{
-    width: 250px;
-    height: 200px;
+.card img {
+    transition: all ease-in-out 1s;
 }
 
-.home-cards {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    margin-bottom: 40px;
+.card-img {
+    overflow: hidden;
 }
 
-.home-cards img {
-    width: 100%;
-    margin-bottom: 20px;
+.profile-img{
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
 }
 
-@media(max-width: 700px) {
-    .home-cards {
-        justify-content: center;
-        text-align: center;
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .home-cards img {
-        width: 50%;
-        height: 40%;
-        margin-bottom: 20px;
-    }
+.card:hover img {
+    transform: scale(1.1);
 }
 
-@media(max-width: 400px) {
-    .home-cards {
-        grid-template-columns: 1fr;
-    }
+.home-cards * {
+    color: rgb(33,37,41);
 }
