--- a/assets/css/dashboard_style_admin.css
+++ b/assets/css/dashboard_style_admin.css
@@ -4,6 +4,20 @@
     background-attachment: fixed;
 }
 
+.product {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/images/login_bg_ferrari.jpg");
+    background-size: cover;
+    background-position-x: 400px;
+    background-position-y: -150px;
+    background-attachment: fixed;
+}
+
+@media screen and (max-width: 1500px) {
+    .product {
+        background-position-y: -20px;
+    }
+}
+
 @media screen and (max-width: 992px) {
     .flex-container {
         flex-direction: column;
