--- a/assets/css/dashboard_style_users.css
+++ b/assets/css/dashboard_style_users.css
@@ -1,3 +1,51 @@
+.profile {
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/images/leclerc.jpg");
+    background-size: cover;
+    background-position-x: -100px;
+}
+
+.product {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/images/login_bg_ferrari.jpg");
+    background-size: cover;
+    background-position-x: 400px;
+    background-position-y: -150px;
+    background-attachment: fixed;
+}
+
+@media screen and (max-width: 1500px) {
+    .profile {
+        height: 100vh;
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/images/leclerc.jpg");
+        background-size: cover;
+        background-position-x: -200px;
+    }
+
+    .product {
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/images/login_bg_ferrari.jpg");
+        background-size: cover;
+        background-position-x: 200px;
+        background-attachment: fixed;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .profile {
+        height: 100vh;
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/images/leclerc.jpg");
+        background-size: cover;
+        background-position-x: -300px;
+    }
+
+    .product {
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/images/login_bg_ferrari.jpg");
+        background-size: cover;
+        background-position-x: 100px;
+        background-attachment: fixed;
+    }
+}
+
+
 @media screen and (max-width: 768px) {
     .flex-container {
         flex-direction: column;
@@ -42,4 +90,3 @@
         animation-delay: 0s;
     }
 }
-
