add create/view product and store page

--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -2,6 +2,11 @@ select {
     color: white !important;
     width: fit-content !important;
 }
+
+select .option_invalid {
+    background-color: rgb(200,200,200) !important;
+}
+
 select .option_valid {
     color: black !important;
 }
