add product multi-photo management

--- a/assets/css/product_new.css
+++ b/assets/css/product_new.css
@@ -5,3 +5,7 @@ select .option_invalid {
 select .option_valid {
     color: black !important;
 }
+
+#img-preview img {
+    object-fit: contain !important;
+}
