--- a/views/public/confirm.html
+++ b/views/public/confirm.html
@@ -20,7 +20,8 @@
     <div class="flex-container d-flex justify-content-center">
         <div class="container-element">
             <h1>Email confirmed!</h1>
-            <h3>Thank you for registering. Return to our site to log in.</h3>
+            <h3>Thank you for joining our community.</h3>
+            <h3>Return to the registration page and log in.</h3>
         </div>
     </div>
 </div>
