--- a/assets/css/profile_style.css
+++ b/assets/css/profile_style.css
@@ -3,6 +3,10 @@ main {
     margin: auto;
 }
 
+body {
+    overflow: hidden;
+}
+
 .flex-container {
     position: relative;
     height: 85vh;
@@ -57,6 +61,7 @@ main {
 
 #photo_profile{
     position: relative;
+    object-fit: cover;
     width: 70px;
     height: 70px;
     top: 20px
@@ -134,3 +139,55 @@ hr {
     width: 24px;
     height: 24px;
 }
+
+#navigate_left {
+    position: relative;
+    right: 20px;
+}
+
+#navigate_right{
+    position: relative;
+    left: 20px;
+}
+
+@media screen and (max-height: 680px) {
+    .container-element{
+        max-width: 70%;
+        max-height: 270px;
+        width: 100%;
+    }
+
+    #button_div {
+        position: relative;
+        bottom: 20px !important;"
+    }
+}
+
+@media screen and (max-height: 460px) {
+    .container-element{
+        top: 40px;
+        max-width: 70%;
+        max-height: 200px;
+        width: 100%;
+    }
+
+    #button_div {
+        position: relative;
+        bottom: 20px !important;"
+    }
+}
+
+@media screen and (max-height: 290px) {
+    .container-element{
+        top: 10px;
+        max-width: 70%;
+        max-height: 150px;
+        width: 100%;
+    }
+
+    #button_div {
+        position: relative;
+        bottom: 20px !important;"
+    }
+}
+
