Refactor: it is still a draft

--- a/assets/css/product_new.css
+++ b/assets/css/product_new.css
@@ -6,6 +6,10 @@ select .option_valid {
     color: black !important;
 }
 
+.img-url {
+    max-width: 400px !important;
+}
+
 #img-preview img {
     object-fit: contain !important;
 }
