--- a/assets/css/private/profile_style.css
+++ b/assets/css/private/profile_style.css
@@ -35,11 +35,14 @@ body {
     width: 0;
 }
 
+/*media query width*/
+
 @media screen and (max-width: 992px) {
     .container-element{
         width: 70%;
     }
 }
+
 
 @media screen and (max-width: 767px) {
     .container-element{
@@ -50,10 +53,9 @@ body {
 
 @media screen and (max-width: 480px){
     .container-element {
-        width: 90%;
+        width: 95%;
     }
 }
-
 
 #bg-profile {
     background: url("/f1_project/assets/images/circuit.jpeg");
@@ -180,6 +182,12 @@ hr {
     right: 15px;
 }
 
+.n-border {
+    border: unset;
+}
+
+/*media query height*/
+
 @media screen and (max-height: 680px) {
     .container-element{
         width: 70%;
@@ -206,12 +214,6 @@ hr {
 
     #checkbox_div {
         margin: 10px !important;
-    }
-}
-
-@media screen and (max-width: 460px) {
-    .container-element{
-        width: 95%;
     }
 }
 
