--- a/assets/css/private/profile_style.css
+++ b/assets/css/private/profile_style.css
@@ -57,6 +57,7 @@ body {
     }
 }
 
+
 #bg-profile {
     background: url("/f1_project/assets/images/circuit.jpeg");
     background-size: cover;
@@ -187,8 +188,7 @@ hr {
 }
 
 /*media query height*/
-
-@media screen and (max-height: 680px) {
+@media screen and (max-height: 681px) and (max-width: 992px){
     .container-element{
         width: 70%;
         max-height: 400px;
@@ -199,6 +199,19 @@ hr {
         bottom: 20px !important;"
     }
 }
+
+@media screen and (max-height: 680px) and (max-width: 480px){
+    .container-element{
+        width: 95%;
+        max-height: 400px;
+    }
+
+    .button_div {
+        position: relative;
+        bottom: 20px !important;"
+    }
+}
+
 
 @media screen and (max-height: 568px){
     .container-element {
